--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,5 +24,5 @@
     <%= f.password_field :password_confirmation %>
   </div>
   <div class="actions"><%= f.submit %></div>
-  <div class="user-login">Have an account? <a href="/sessions/new">Login here!</a></div>
+  <div class="user-login">Have an account? <a href="/session/new">Login here!</a></div>
 <% end %>
