--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,5 @@
 <h3>Events I Created</h3>
+<button class="btn"><a href="/events/new">Create event</a></button>
 <% if @created_events.empty? %>
   <div class="created-events_empty">Sorry you haven't created any events. <a href="/events/new">Create one here!</a></div>
 <% else %>
