--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,8 +47,8 @@
           <a class="brand" href="#">Platz</a>
           <div class="container nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
+              <li><%= link_to "View Events", "/session/new"  %></li>
+              <li><%= link_to "My Events", "/events"  %></li>
               <li><%= link_to "Logout", session_url, :method => :delete %></li>
             </ul>
           </div><!--/.nav-collapse -->
