--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,5 +1,5 @@
 <body>
-  <%= form_for([current_user, @event]) do |form| %>
+  <%= form_for(@event) do |form| %>
     <div>
       <%= form.label :name %>
       <%= form.text_field :name %>
