new universal header with login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,25 +36,7 @@
   </head>
   <body>
 
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">Platz</a>
-          <div class="container nav-collapse">
-            <ul class="nav">
-              <li><%= link_to "View Events", "/session/new"  %></li>
-              <li><%= link_to "My Events", "/events"  %></li>
-              <li><%= link_to "Logout", session_url, :method => :delete %></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+    <%= render 'layouts/header'%>
 
     <div class="container">
         <div class="row">
