link to event on my events page

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -18,7 +18,7 @@
   <% @created_events.each do |event| %>
     <tr>
       <td>
-        <%= event.name %>
+        <%= link_to event.name, event_url(event) %>
       </td>
       <td>
         <%= event.street %></br>
