--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -28,8 +28,8 @@
         <%= event.occurs_at.try(:strftime, "%B %d, %l:%M %p") %>
       </td>
       <td>
-        <%= link_to 'edit', edit_event_url(current_user, :id => event.id) %>
-        <%= link_to "destroy", user_url(current_user, :id => event.id), :method => :delete, :confirm => "Are you sure?" %>
+        <%= link_to 'edit', edit_event_url(event) %>
+        <%= link_to "destroy", event_url(event), :method => :delete, :confirm => "Are you sure?" %>
       </td>
     </tr>
   <% end %>
