header with login & logout working properly

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,17 +5,26 @@
 			
 			<ul class="nav">
         <li><%= link_to "View Events", "/session/new"  %></li>
-        <li><%= link_to "My Events", "/events"  %></li>
-        <li><%= link_to "Logout", session_url, :method => :delete %></li>
       </ul>
       
-	
-			  <%= form_tag session_path, :class => 'navbar-form pull-right ' do %>
-			    <%= text_field_tag :email, params[:email], :placeholder => "Email address" %>
-			    <%= password_field_tag :password, "", :placeholder => 'Password' %>
-			    <%= submit_tag "Log in", :class => "btn" %>
+			<div class="nav-collapse collapse">
+			  <% if current_user.nil? %>
+			    <%= form_tag session_path, :class => 'navbar-form pull-right' do %>
+			      <%= text_field_tag :email, params[:email], :placeholder => "Email address" %>
+			      <%= password_field_tag :password, "", :placeholder => 'Password' %>
+			      <%= submit_tag "Log in", :class => "btn" %>
+			    <% end %>
+			  
+			  <% else %>
+          <p class="navbar-text pull-right">
+            Welcome <%= current_user.name %>
+          </p>
+          <ul class="nav">
+            <li><%= link_to "My Events", "/events"  %></li>
+            <li><%= link_to "Logout", session_url, :method => :delete %></li>
+          </ul>  
 			  <% end %>
-		
+			</div>
 		</div> <!-- end of container -->
 	</div> <!-- end of navbar-inner -->
 </header>
