--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -55,7 +55,7 @@
   <% @events.each do |event| %>
     <tr>
       <td>
-        <%= event.name %>
+        <%= link_to event.name, event_url(event) %>
       </td>
       <td>
         <%= event.street %></br>
