--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,9 +35,7 @@
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
   </head>
   <body>
-
     <%= render 'layouts/header'%>
-
     <div class="container">
         <div class="row">
           <div class="span9">
@@ -58,7 +56,7 @@
         </div><!--/row-->
 
       <footer>
-        <p>&copy; Company 2012</p>
+        <p>&copy; Square 2013</p>
       </footer>
 
     </div> <!-- /container -->
