--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,9 @@
 <div class="navbar navbard-inverse navbar-fixed-top">
 	<div class="navbar-inner">
 		<div class="container">
-			<a class="brand" href="#"><%= image_tag("logo.png")%></a>
+			<a class="brand" href=""><%= image_tag("logo.png")%></a>
 			
-			<ul class="nav">
+			<ul class="nav nav-centre">
         <li><%= link_to "View Events", "/session/new"  %></li>
       </ul>
       
@@ -16,10 +16,10 @@
   			    <%= link_to "New User", new_user_url, :class => "btn" %>
 			    <% end %>
 			  <% else %>
-          <p class="navbar-text pull-right">
+          <p class="navbar-text nav-centre pull-right">
             Welcome <%= current_user.name %>
           </p>
-          <ul class="nav">
+          <ul class="nav nav-centre">
             <li><%= link_to "My Events", "/events"  %></li>
             <li><%= link_to "Logout", session_url, :method => :delete %></li>
           </ul>  
