--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -21,6 +21,6 @@
       <%= form.text_area :details, :rows => 3 %>
     </div>
     <div>
-      <%= form.submit %>
+      <%= form.submit :class => "btn"%>
     </div>
   <% end %>
