--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,8 +55,10 @@
           </div><!--/span-->
         </div><!--/row-->
 
-      <footer>
-        <p>&copy; Square 2013</p>
+      <footer class="footer-content">
+        <div class="bottom-tier">
+          <p class="copyright">&copy; 2013 Emily, Jennifer, Joy</p>
+        </div>
       </footer>
 
     </div> <!-- /container -->
