--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -1,8 +1,24 @@
 body {
   padding-top: 100px;
   font-family:Century Gothic,arial,sans-serif;
+  background-image: url(asset-path("bkg.png", image));
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
+.faded-dates {
+  color: #aaa;
+}
+
+.cal-title {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.table-calendar {
+background: #fff;
+opacity: 0.7;
+}
 
 .table-calendar td {
   height: 80px;
@@ -10,10 +26,13 @@ body {
   overflow: auto;
 }
 
-
+.progress {
+  margin: 2px;
+  background-color: #a8a6a9;
+}
 
 .calendar-event {
-    list-style-type:none;
+  list-style-type:none;
 	background-color:black;
 	color:white;
 	padding:2px;
