--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -26,6 +26,7 @@
   <% else %>
     <% if current_user %>
       <%= link_to 'Attend', event_attend_url(@event, :user_id => current_user.id), :method => :post, :class => "btn" %>
+      <%= link_to 'Maybe', event_attend_url(@event, :user_id => current_user.id), :method => :post, :class => "btn" %>
     <% end %>
   <% end %>
 </div>
