fix logo functionality

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbard-inverse navbar-fixed-top">
 	<div class="navbar-inner">
 		<div class="container">
-			<a class="brand" href=""><%= image_tag("logo.png")%></a>
+			<a class="brand" href="/session/new"><%= image_tag("logo.png")%></a>
 			
 			<ul class="nav nav-centre">
         <li><%= link_to "View Events", "/session/new"  %></li>
