--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -1,9 +1,22 @@
 body {
-  padding-top: 100px;
+  padding-top: 60px;
   font-family:Century Gothic,arial,sans-serif;
-  background-image: url(asset-path("bkg.png", image));
-  background-repeat: no-repeat;
-  background-size: 100%;
+}
+
+select {
+ width: auto;
+ min-width: 30px;
+ max-width: 100px;
+}
+
+.background {
+background-image: url(asset-path("bkg.png", image));
+background-repeat: no-repeat;
+background-size: 100%;
+}
+
+.row {
+padding-top: 30px;
 }
 
 .faded-dates {
@@ -29,6 +42,11 @@ opacity: 0.7;
 .calendar-event--outside{
   padding: 2px;
 }
+.progress {
+  margin: 2px;
+  background-color: #a8a6a9;
+  background-image: none;
+}
 
 .calendar-event {
   list-style-type:none;
@@ -53,19 +71,8 @@ opacity: 0.7;
 }
 
 .footer-content {
-padding: 30px 0 60px;
+margin-top: -15px;
+padding-right: 110px;
 color: #a7a9aa;
 text-shadow: 0 1px 0 #fff;
-}
-
-.bottom-tier {
-position: relative;
-padding: 0 3px;
-}
-
-.copyright {
-position: absolute;
-top: 8px;
-right: 16px;
-font-weight: normal;
 }
