random color changes

--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -7,11 +7,16 @@
   */
 
 .navbar-form {
-	margin-top: 10px;
+	margin-top:10px;
 }
 
 a {
 	color:#db7093;
+}
+
+a:hover {
+	text-decoration:none;
+	color:#cdc9c9;
 }
 
 .btn {
